<resources>
    <string name="app_name">My Application</string>
    <string name="tv1">Hello World!</string>
    <string name="tv1_1">你好世界!</string>
    <string name="btn1">Go to Activity two</string>
    <string name="btn2">Go to Text Activity</string>
    <string name="btn3">Go to Linear Layout Activity</string>
    <string name="btn4">Go to Linear ScrollView Activity</string>
    <string name="btn5">Go to Button Activity</string>
    <string name="btn6">Go to ImageView Activity</string>
    <string name="btn7">Go to Calculator Activity</string>
    <string name="btn8">Go to Next Activity</string>
    <string name="btn9">Go to Read XML Activity</string>
    <string name="tv2">Welcome to Activity 2</string>
    <string name="tv_t1">Text 1</string>
    <string name="tv_t3">Text 2</string>
    <string name="tv_t2">Text 2</string>
    <string name="tv_t4">color setting</string>
    <string name="tv_read">Read String From XML</string>
    <string name="first_short_name">First short</string>
    <string name="first_long_name">First long name</string>
    <string name="second_short_name">Second short</string>
    <string name="second_long_name">Second long name</string>
    <string name="third_short_name">Third short</string>
    <string name="third_long_name">Third long name</string>
</resources>