<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcuts>
        <shortcut
            android:enabled="true"
            android:shortcutId="first"
            android:icon="@drawable/ic_launcher_foreground"
            android:shortcutShortLabel="@string/first_short_name"
            android:shortcutLongLabel="@string/first_long_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.androidLearning"
                android:targetClass="com.example.androidLearning.MainActivity"/>
        </shortcut>
        <shortcut
            android:enabled="true"
            android:shortcutId="second"
            android:icon="@drawable/ic_launcher_foreground"
            android:shortcutShortLabel="@string/second_short_name"
            android:shortcutLongLabel="@string/second_long_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.androidLearning"
                android:targetClass="com.example.androidLearning.ActivityStartMode"/>
        </shortcut>
        <shortcut
            android:enabled="true"
            android:shortcutId="third"
            android:icon="@drawable/ic_launcher_foreground"
            android:shortcutShortLabel="@string/third_short_name"
            android:shortcutLongLabel="@string/third_long_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.androidLearning"
                android:targetClass="com.example.androidLearning.ActivitySwitch"/>
        </shortcut>
    </shortcuts>
</resources>