<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_t1"
        android:textSize="16sp"
        android:textColor="#ff00ff"
        android:background="#000000"/>
    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_t2"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_t3"
        android:textSize="24sp"
        android:textColor="@color/pink"
        android:background="@color/material_dynamic_neutral10"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_t4"
        android:textSize="24sp"
        android:textColor="@color/pink"
        android:background="@color/material_dynamic_neutral10"/>
    <TextView
        android:id="@+id/tv_dimension"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_t4"
        android:textSize="24sp"
        android:textColor="@color/pink"
        android:background="@color/material_dynamic_neutral10"/>
</LinearLayout>